Fix leaderboard row wrapping (#98)

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1660,10 +1660,28 @@ h2 .stat-value {
 
 /* Avatar displayed in the leaderboard table */
 .lb-avatar {
-    width: 32px;
-    height: 32px;
+    width: 24px;
+    height: 24px;
     border-radius: 50%;
-    margin-right: 0.5rem;
+    margin-right: 0.25rem;
+    vertical-align: middle;
+}
+
+/* Ensure leaderboard name cells stay on one line */
+.leaderboard-table .lb-name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 200px;
+    display: flex;
+    align-items: center;
+}
+
+.leaderboard-table .lb-name a {
+    display: inline-block;
+    max-width: 160px;
+    overflow: hidden;
+    text-overflow: ellipsis;
     vertical-align: middle;
 }
 
